crates/validation/src/snapshots/validation__field_selection__tests__no_live_no_projections_depth_1.snap
---
source: crates/validation/src/field_selection.rs
expression: snap
---
Snap {
    selects: [
        (
            "_meta/op",
            CoreMetadata,
        ),
        (
            "a_bool",
            GroupByKey,
        ),
        (
            "a_bool",
            DesiredDepth,
        ),
        (
            "a_date_time",
            DesiredDepth,
        ),
        (
            "a_map",
            DesiredDepth,
        ),
        (
            "a_num1",
            DesiredDepth,
        ),
        (
            "a_num2",
            DesiredDepth,
        ),
        (
            "an_array",
            DesiredDepth,
        ),
        (
            "an_array_redux",
            DesiredDepth,
        ),
        (
            "an_extra",
            DesiredDepth,
        ),
        (
            "an_int",
            GroupByKey,
        ),
        (
            "an_int",
            DesiredDepth,
        ),
        (
            "flow_document",
            ConnectorRequiresLocation {
                reason: "",
            },
        ),
        (
            "flow_published_at",
            CoreMetadata,
        ),
        (
            "forbid",
            DesiredDepth,
        ),
        (
            "nested",
            UserRequires,
        ),
        (
            "nested",
            DesiredDepth,
        ),
    ],
    rejects: [
        (
            "_meta/before/forbid",
            ConnectorForbids {
                reason: "naughty",
            },
        ),
        (
            "an_extra",
            UserExcludes,
        ),
        (
            "forbid",
            ConnectorForbids {
                reason: "frosts the jib",
            },
        ),
    ],
    group_by: [
        "an_int",
        "a_bool",
    ],
    document: Some(
        "flow_document",
    ),
    field_outcomes: {
        "ABool": Right(
            CollectionOmits,
        ),
        "ADateTime": Right(
            CollectionOmits,
        ),
        "AMap": Right(
            CollectionOmits,
        ),
        "ANumberOne": Right(
            CollectionOmits,
        ),
        "AnArray": Right(
            CollectionOmits,
        ),
        "AnInt": Right(
            CollectionOmits,
        ),
        "NestedFoo": Right(
            CollectionOmits,
        ),
        "_meta": Right(
            NotSelected,
        ),
        "_meta/before": Right(
            NotSelected,
        ),
        "_meta/before/a_bool": Right(
            NotSelected,
        ),
        "_meta/before/a_date_time": Right(
            NotSelected,
        ),
        "_meta/before/a_map": Right(
            NotSelected,
        ),
        "_meta/before/a_num1": Right(
            NotSelected,
        ),
        "_meta/before/a_num2": Right(
            NotSelected,
        ),
        "_meta/before/an_array": Right(
            NotSelected,
        ),
        "_meta/before/an_array_redux": Right(
            NotSelected,
        ),
        "_meta/before/an_extra": Right(
            NotSelected,
        ),
        "_meta/before/an_int": Right(
            NotSelected,
        ),
        "_meta/before/forbid": Right(
            ConnectorForbids {
                reason: "naughty",
            },
        ),
        "_meta/before/nested": Right(
            NotSelected,
        ),
        "_meta/before/nested/bar": Right(
            NotSelected,
        ),
        "_meta/before/nested/baz": Right(
            NotSelected,
        ),
        "_meta/before/nested/foo": Right(
            NotSelected,
        ),
        "_meta/flow_truncated": Right(
            NotSelected,
        ),
        "_meta/op": Left(
            CoreMetadata,
        ),
        "_meta/source": Right(
            NotSelected,
        ),
        "_meta/source/loc": Right(
            NotSelected,
        ),
        "_meta/source/schema": Right(
            NotSelected,
        ),
        "_meta/source/snapshot": Right(
            NotSelected,
        ),
        "_meta/source/table": Right(
            NotSelected,
        ),
        "_meta/source/ts_ms": Right(
            NotSelected,
        ),
        "_meta/source/txid": Right(
            NotSelected,
        ),
        "a_bool": Left(
            GroupByKey,
        ),
        "a_date_time": Left(
            DesiredDepth,
        ),
        "a_map": Left(
            DesiredDepth,
        ),
        "a_num1": Left(
            DesiredDepth,
        ),
        "a_num2": Right(
            DuplicateFold {
                folded_field: "NUM",
                other_field: "a_num1",
            },
        ),
        "an_array": Left(
            DesiredDepth,
        ),
        "an_array_redux": Left(
            DesiredDepth,
        ),
        "an_extra": Right(
            UserExcludes,
        ),
        "an_int": Left(
            GroupByKey,
        ),
        "flow_document": Left(
            ConnectorRequiresLocation {
                reason: "",
            },
        ),
        "flow_published_at": Left(
            CoreMetadata,
        ),
        "forbid": Right(
            ConnectorForbids {
                reason: "frosts the jib",
            },
        ),
        "nested": Left(
            UserRequires,
        ),
        "nested/bar": Right(
            CoveredLocation,
        ),
        "nested/baz": Right(
            CoveredLocation,
        ),
        "nested/foo": Right(
            CoveredLocation,
        ),
    },
    selection: FieldSelection {
        keys: [
            "an_int",
            "a_bool",
        ],
        values: [
            "_meta/op",
            "a_date_time",
            "a_map",
            "a_num1",
            "an_array",
            "an_array_redux",
            "flow_published_at",
            "nested",
        ],
        document: "flow_document",
        field_config_json_map: {
            "nested": b"{\"cfg\":42}",
        },
    },
    conflicts: [],
}
