crates/validation/src/snapshots/validation__field_selection__tests__no_live_no_projections_depth_2_with_delta_model_group_by.snap
---
source: crates/validation/src/field_selection.rs
expression: snap
---
Snap {
    selects: [
        (
            "_meta/op",
            CoreMetadata,
        ),
        (
            "a_bool",
            GroupByKey,
        ),
        (
            "a_bool",
            DesiredDepth,
        ),
        (
            "a_date_time",
            DesiredDepth,
        ),
        (
            "a_map",
            DesiredDepth,
        ),
        (
            "a_num1",
            DesiredDepth,
        ),
        (
            "a_num2",
            DesiredDepth,
        ),
        (
            "an_array",
            DesiredDepth,
        ),
        (
            "an_array_redux",
            DesiredDepth,
        ),
        (
            "an_extra",
            DesiredDepth,
        ),
        (
            "an_int",
            DesiredDepth,
        ),
        (
            "flow_published_at",
            CoreMetadata,
        ),
        (
            "forbid",
            DesiredDepth,
        ),
        (
            "nested",
            UserRequires,
        ),
        (
            "nested/bar",
            DesiredDepth,
        ),
        (
            "nested/baz",
            GroupByKey,
        ),
        (
            "nested/baz",
            DesiredDepth,
        ),
        (
            "nested/foo",
            DesiredDepth,
        ),
    ],
    rejects: [
        (
            "_meta/before/forbid",
            ConnectorForbids {
                reason: "naughty",
            },
        ),
        (
            "an_extra",
            UserExcludes,
        ),
        (
            "forbid",
            ConnectorForbids {
                reason: "frosts the jib",
            },
        ),
    ],
    group_by: [
        "nested/baz",
        "a_bool",
    ],
    document: None,
    field_outcomes: {
        "ABool": Right(
            CollectionOmits,
        ),
        "ADateTime": Right(
            CollectionOmits,
        ),
        "AMap": Right(
            CollectionOmits,
        ),
        "ANumberOne": Right(
            CollectionOmits,
        ),
        "AnArray": Right(
            CollectionOmits,
        ),
        "AnInt": Right(
            CollectionOmits,
        ),
        "NestedFoo": Right(
            CollectionOmits,
        ),
        "_meta": Right(
            NotSelected,
        ),
        "_meta/before": Right(
            NotSelected,
        ),
        "_meta/before/a_bool": Right(
            NotSelected,
        ),
        "_meta/before/a_date_time": Right(
            NotSelected,
        ),
        "_meta/before/a_map": Right(
            NotSelected,
        ),
        "_meta/before/a_num1": Right(
            NotSelected,
        ),
        "_meta/before/a_num2": Right(
            NotSelected,
        ),
        "_meta/before/an_array": Right(
            NotSelected,
        ),
        "_meta/before/an_array_redux": Right(
            NotSelected,
        ),
        "_meta/before/an_extra": Right(
            NotSelected,
        ),
        "_meta/before/an_int": Right(
            NotSelected,
        ),
        "_meta/before/forbid": Right(
            ConnectorForbids {
                reason: "naughty",
            },
        ),
        "_meta/before/nested": Right(
            NotSelected,
        ),
        "_meta/before/nested/bar": Right(
            NotSelected,
        ),
        "_meta/before/nested/baz": Right(
            NotSelected,
        ),
        "_meta/before/nested/foo": Right(
            NotSelected,
        ),
        "_meta/flow_truncated": Right(
            NotSelected,
        ),
        "_meta/op": Left(
            CoreMetadata,
        ),
        "_meta/source": Right(
            NotSelected,
        ),
        "_meta/source/loc": Right(
            NotSelected,
        ),
        "_meta/source/schema": Right(
            NotSelected,
        ),
        "_meta/source/snapshot": Right(
            NotSelected,
        ),
        "_meta/source/table": Right(
            NotSelected,
        ),
        "_meta/source/ts_ms": Right(
            NotSelected,
        ),
        "_meta/source/txid": Right(
            NotSelected,
        ),
        "a_bool": Left(
            GroupByKey,
        ),
        "a_date_time": Left(
            DesiredDepth,
        ),
        "a_map": Left(
            DesiredDepth,
        ),
        "a_num1": Left(
            DesiredDepth,
        ),
        "a_num2": Right(
            DuplicateFold {
                folded_field: "NUM",
                other_field: "a_num1",
            },
        ),
        "an_array": Left(
            DesiredDepth,
        ),
        "an_array_redux": Left(
            DesiredDepth,
        ),
        "an_extra": Right(
            UserExcludes,
        ),
        "an_int": Left(
            DesiredDepth,
        ),
        "flow_document": Right(
            NotSelected,
        ),
        "flow_published_at": Left(
            CoreMetadata,
        ),
        "forbid": Right(
            ConnectorForbids {
                reason: "frosts the jib",
            },
        ),
        "nested": Left(
            UserRequires,
        ),
        "nested/bar": Right(
            CoveredLocation,
        ),
        "nested/baz": Left(
            GroupByKey,
        ),
        "nested/foo": Right(
            CoveredLocation,
        ),
    },
    selection: FieldSelection {
        keys: [
            "nested/baz",
            "a_bool",
        ],
        values: [
            "_meta/op",
            "a_date_time",
            "a_map",
            "a_num1",
            "an_array",
            "an_array_redux",
            "an_int",
            "flow_published_at",
            "nested",
        ],
        document: "",
        field_config_json_map: {
            "nested": b"{\"cfg\":42}",
        },
    },
    conflicts: [],
}
